# AI_QUADROTOR_GNSS_RESEARCH

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  autonomy_audit.md  fyp_report.txt  merge_all_data.py  merge_datasets.py  pyproject.toml  requirements.txt  steup_notes.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
configs/: deploy_exploration.yaml  pretrain_kaggle.yaml  record.yaml  record_centerline.yaml  rl_ppo.yaml  rl_ppo_pretrained.yaml  run_cnn_deployment.yaml  settings_training.json  train_cnn.yaml  train_cnn_centerline.yaml  train_cnn_fixed.yaml  train_ppo.yaml  train_ppo_dr.yaml  train_ppo_parking_finetune.yaml  train_ppo_waypoint.yaml  train_sac.yaml  train_sklearn.yaml
docs/: PANEL_PRESENTATION_GUIDE.html
ros_ws/src/rl_inference/: package.xml  setup.py
ros_ws/src/rl_inference/config/: inference.yaml
ros_ws/src/rl_inference/rl_inference/: inference_node.py
ros_ws/src/safety_monitor/: package.xml  setup.py
ros_ws/src/safety_monitor/safety_monitor/: safety_node.py
scripts/: _tmp_write_report.py  export_onnx.py  export_tensorrt.py  extract_tb_metrics.py  generate_presentation.py  monitor_training.py  run_ablations.py  run_batch_comparison.py  run_full_eval.py  run_hyperparameter_sweep.py  run_statistical_analysis.py  vast_cluster.py  watch_and_dispatch.py  write_report_draft.py
tests/: test_ablations.py  test_airsim_env_reset_retry.py  test_batch_comparison_filter.py  test_domain_randomization.py  test_export_shape_detection.py  test_export_tensorrt.py  test_hyperparameter_sweep.py  test_metrics.py  test_metrics_collision.py  test_rewards.py  test_rl_inference.py  test_safety_node.py  test_statistical_analysis.py  test_sweep_overrides.py  test_train_entrypoint.py  test_train_resume_hyperparams.py  test_train_step_ceiling.py  test_vio_estimator.py  test_vio_rotation.py  test_waypoint_rewards.py
(+38 files in other folders)
