<?xml version="1.0"?>
<package format="3">
  <name>safety_monitor</name>
  <version>0.1.0</version>
  <description>Safety monitor node — velocity clamping and proximity braking for QDrone 2</description>
  <maintainer email="h00404752@hw.ac.uk">Abdalla Shoaeb</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
